--- a/MyHome/app/src/main/res/values-v21/styles.xml
+++ b/MyHome/app/src/main/res/values-v21/styles.xml
@@ -3,6 +3,8 @@
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:colorBackground">@color/background</item>
         <item name="android:statusBarColor">@color/black</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
