--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -16,139 +17,175 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
+            android:theme="@style/textInputLayoutStyle"
             tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
-
-            <ImageView
-                android:id="@+id/login_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="32dp"
-                android:layout_marginTop="30dp"
-                android:src="@mipmap/home_logo" />
 
             <RelativeLayout
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/login_logo"
+                android:layout_marginTop="30dp"
                 android:focusableInTouchMode="true"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/firstName"
-                    style="@style/tradeGothicLTStdLight_14"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/firstNameLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="42dp"
-                    android:layout_marginRight="42dp"
-                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                    android:hint="@string/prompt_first_name"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp" />
+                    android:layout_marginRight="42dp">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/lastName"
-                    style="@style/tradeGothicLTStdLight_14"
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/firstName"
+                        style="@style/tradeGothicLTStdLight_14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:hint="@string/prompt_first_name"
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textSize="18sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/lastNameLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/firstName"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="42dp"
-                    android:layout_marginRight="42dp"
-                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                    android:hint="@string/prompt_last_name"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp" />
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/email"
-                    style="@style/tradeGothicLTStdLight_14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/lastName"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="42dp"
-                    android:layout_marginRight="42dp"
-                    android:hint="@string/prompt_email"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp" />
-
-                <RelativeLayout
-                    android:id="@+id/password_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/email"
+                    android:layout_below="@+id/firstNameLayout"
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="42dp"
                     android:layout_marginRight="42dp">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/password"
+                        android:id="@+id/lastName"
                         style="@style/tradeGothicLTStdLight_14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/password_criteria"
-                        android:drawableRight="@mipmap/show_password"
-                        android:hint="@string/prompt_password"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:hint="@string/prompt_last_name"
                         android:imeOptions="actionNext"
-                        android:inputType="textPassword"
+                        android:inputType="text"
                         android:maxLines="1"
                         android:paddingLeft="10dp"
-                        android:paddingRight="10dp" />
+                        android:paddingRight="10dp"
+                        android:textSize="18sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/emailLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/lastNameLayout"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/email"
+                        style="@style/tradeGothicLTStdLight_14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_email"
+                        android:imeOptions="actionNext"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textSize="18sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <RelativeLayout
+                    android:id="@+id/password_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/emailLayout"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="42dp"
+                    android:layout_marginRight="42dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/passwordLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/password_criteria"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/primary">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/password"
+                            style="@style/tradeGothicLTStdLight_14"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:drawableRight="@mipmap/show_password"
+                            android:hint="@string/prompt_password"
+                            android:imeOptions="actionNext"
+                            android:inputType="textPassword"
+                            android:maxLines="1"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:textSize="18sp" />
+
+                    </android.support.design.widget.TextInputLayout>
 
                     <ImageView
                         android:id="@+id/password_criteria"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:layout_centerInParent="true"
+                        android:layout_centerVertical="true"
                         android:onClick="@{handlers::onClickEvent}"
-                        android:paddingBottom="8dp"
+                        android:paddingBottom="0dp"
                         android:paddingLeft="8dp"
                         android:paddingRight="8dp"
-                        android:paddingTop="8dp"
-                        android:src="@mipmap/password_criteria" />
+                        android:paddingTop="10dp"
+                        android:src="@mipmap/tooltip" />
                 </RelativeLayout>
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/re_enter_password"
-                    style="@style/tradeGothicLTStdLight_14"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/re_enter_password_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/password_layout"
                     android:layout_marginLeft="42dp"
-                    android:layout_marginRight="42dp"
-                    android:hint="@string/prompt_re_enter_password"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp" />
+                    android:layout_marginRight="42dp">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/re_enter_password"
+                        style="@style/tradeGothicLTStdLight_14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_re_enter_password"
+                        android:imeOptions="actionDone"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textSize="18sp" />
+
+                </android.support.design.widget.TextInputLayout>
 
                 <Button
                     android:id="@+id/enroll_button"
                     style="@style/grayButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/re_enter_password"
+                    android:layout_below="@+id/re_enter_password_layout"
                     android:layout_marginBottom="40dp"
                     android:layout_marginLeft="42dp"
                     android:layout_marginRight="42dp"
                     android:layout_marginTop="32dp"
                     android:onClick="@{handlers::onClickEvent}"
-                    android:text="@string/action_next" />
+                    android:text="@string/action_next"
+                    android:textSize="18sp" />
             </RelativeLayout>
 
             <!-- Enroll progress -->
