--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -274,7 +274,7 @@
                     android:layout_marginEnd="11dp"
                     android:layout_marginStart="11dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/sunset_picture"
+                    android:background="@mipmap/sunset_picture"
                     android:scaleType="fitCenter" />
 
 
@@ -301,7 +301,7 @@
                     android:layout_marginEnd="11dp"
                     android:layout_marginStart="11dp"
                     android:layout_marginTop="19dp"
-                    android:background="@drawable/dog_picture"
+                    android:background="@mipmap/dog_picture"
                     android:scaleType="fitCenter" />
 
                 <TextView
