--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -2,23 +2,24 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/header"
             style="@style/tradeGothicLTStdLight_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginTop="32dp"
-            android:gravity="center"
-            android:text="@string/contact_us_header" />
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="18dp"
+            android:lineSpacingExtra="6sp"
+            android:text="@string/contact_us_header"
+            android:textSize="34sp" />
 
         <TextView
             android:id="@+id/subheader"
@@ -26,35 +27,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/header"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="18dp"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:text="@string/contact_us_subheader" />
-
-        <TextView
-            android:id="@+id/warning"
-            style="@style/tradeGothicLTStdLight_14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/subheader"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:text="@string/contact_us_warning"
-            android:textColor="@color/red" />
+            android:lineSpacingExtra="7sp"
+            android:text="@string/contact_us_subheader"
+            android:textSize="22sp" />
 
         <ImageView
             android:id="@+id/email_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/warning"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_below="@id/subheader"
             android:layout_marginLeft="52dp"
             android:layout_marginTop="92dp"
-            android:padding="6dp"
             android:src="@mipmap/email" />
 
         <TextView
@@ -62,36 +50,25 @@
             style="style/tradeGothicLTStd_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/warning"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="12dp"
+            android:layout_alignBottom="@id/email_icon"
+            android:layout_below="@id/subheader"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="92dp"
             android:layout_toRightOf="@id/email_icon"
-            android:padding="6dp"
+            android:gravity="bottom"
             android:text="hello@dignityhealth.org"
-            android:textColor="@color/text_darker"
-            android:textSize="16dp"
+            android:textColor="@color/primary"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:layout_below="@id/email"
-            android:layout_marginBottom="47dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="47dp"
-            android:layout_toRightOf="@id/email_icon"
-            android:background="@color/beige" />
-
         <ImageView
             android:id="@+id/phone_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/divider"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_below="@id/email"
             android:layout_marginLeft="52dp"
-            android:padding="6dp"
+            android:layout_marginTop="72dp"
             android:src="@mipmap/phone" />
 
         <TextView
@@ -99,15 +76,31 @@
             style="style/tradeGothicLTStd_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/divider"
-            android:layout_marginLeft="12dp"
+            android:layout_alignBottom="@id/phone_icon"
+            android:layout_below="@id/email"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/phone_icon"
             android:autoLink="phone"
-            android:padding="6dp"
+            android:gravity="bottom"
             android:text="1-844-274-8497"
-            android:textColorLink="@color/text_darker"
-            android:textSize="16dp"
+            android:textColorLink="@color/primary"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/red"
+            android:gravity="center"
+            android:paddingBottom="12dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:paddingTop="12dp"
+            android:text="@string/contact_us_warning"
+            android:textColor="@color/text_light"
+            android:textSize="18sp" />
+
     </RelativeLayout>
 </ScrollView>
