Dashboard - centered text for appointments

--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -83,12 +83,12 @@
                 <TextView
                     android:id="@+id/txt_db_appoint_content"
                     style="@style/tradeGothicLTStdLight_16"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="38dp"
                     android:layout_marginEnd="11dp"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="14dp"
-                    android:gravity="center|left"
+                    android:gravity="center"
                     android:lineSpacingExtra="22sp"
                     android:text="No appointments scheduled"
                     android:textColor="@color/db_gunmetal"
