--- a/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/textInputLayoutStyle">
@@ -9,13 +10,17 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="18dp">
+        android:paddingTop="18dp"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/provider_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp">
+            app:errorEnabled="true"
+            app:errorTextAppearance="@style/error_appearance"
+            app:hintTextAppearance="@style/hint_appearance">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/provider"
@@ -32,7 +37,9 @@
             android:id="@+id/id_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp">
+            app:errorEnabled="true"
+            app:errorTextAppearance="@style/error_appearance"
+            app:hintTextAppearance="@style/hint_appearance">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/id"
@@ -49,7 +56,9 @@
             android:id="@+id/group_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp">
+            app:errorEnabled="true"
+            app:errorTextAppearance="@style/error_appearance"
+            app:hintTextAppearance="@style/hint_appearance">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/group"
