--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -13,6 +13,18 @@
 
     <style name="textInputLayoutStyle" parent="Widget.Design.TextInputLayout">
         <item name="android:textColorHint">@color/text_darker</item>
+        <item name="errorTextAppearance">@style/error_appearance</item>
+        <item name="hintTextAppearance">@style/hint_appearance</item>
+    </style>
+
+    <style name="hint_appearance" parent="TextAppearance.Design.Hint">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="error_appearance" parent="TextAppearance.Design.Error">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="ToolBarTheme.ToolBarStyle.Light" parent="ThemeOverlay.AppCompat.Light">
@@ -60,6 +72,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
     </style>
+
     <style name="db_scheduleButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/db_schedule_button_enable</item>
         <item name="android:textColor">@color/db_white_two</item>
@@ -68,6 +81,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:layout_height">44dp</item>
     </style>
+
     <style name="db_searchButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/db_search_button_enable</item>
         <item name="android:textColor">@color/db_gunmetal</item>
@@ -94,6 +108,7 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/md_blue_grey_650</item>
     </style>
+
     <style name="tradeGothicLTStdBold" parent="textStylebase">
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
@@ -115,21 +130,26 @@
     <style name="tradeGothicLTStdBd2_36" parent="tradeGothicLTStdBd2">
         <item name="android:textSize">36sp</item>
     </style>
+
     <style name="tradeGothicLTStdBd2_20" parent="tradeGothicLTStdBd2">
         <item name="android:textSize">20sp</item>
     </style>
+
     <style name="tradeGothicLTStdBd2_20_deepAqua" parent="tradeGothicLTStdBd2">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/db_deep_aqua</item>
     </style>
+
     <style name="tradeGothicLTStdBold_18" parent="tradeGothicLTStdBold">
         <item name="android:textSize">18sp</item>
     </style>
+
     <style name="dbDivider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
     </style>
+
     <style name="tradeGothicLTStd_16" parent="tradeGothicLTStd">
         <item name="android:textSize">16sp</item>
     </style>
@@ -188,7 +208,7 @@
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
-    <style name="SeekBarTheme" parent="Widget.AppCompat.SeekBar" >
+    <style name="SeekBarTheme" parent="Widget.AppCompat.SeekBar">
         <item name="colorAccent">@color/accent</item>
     </style>
 
