--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -196,7 +196,7 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="18dp"
                     android:letterSpacing="-0.01"
-                    android:text="Schedule an Appointment" />
+                    android:text="@string/book_an_appointment" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
