--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,7 +14,6 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
-
 
         <include
             android:id="@+id/toolbarWhite"
@@ -57,35 +57,46 @@
             android:textColor="@color/text_dark"
             android:textSize="20sp" />
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/email"
-            style="@style/tradeGothicLTStdLight_14"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/subheader"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="42dp"
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:paddingEnd="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingStart="16dp" />
+            app:errorEnabled="true"
+            app:errorTextAppearance="@style/error_appearance"
+            app:hintTextAppearance="@style/hint_appearance">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email"
+                style="@style/tradeGothicLTStdLight_18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingStart="16dp" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/forgot_password_button"
             style="@style/grayButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/email"
+            android:layout_below="@id/email_layout"
             android:layout_marginBottom="40dp"
             android:layout_marginLeft="42dp"
             android:layout_marginRight="42dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="24dp"
             android:onClick="@{handlers::onClickEvent}"
-            android:text="@string/action_reset_password" />
+            android:text="@string/action_reset_password"
+            android:textSize="16sp" />
 
         <!-- Login progress -->
         <ProgressBar
