--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -80,15 +80,17 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
+                android:layout_marginLeft="4dp"
                 android:text="@string/gender"
-                android:textSize="13sp" />
+                android:textColor="@color/text_darker"
+                android:textSize="14sp" />
 
             <Spinner
                 android:id="@+id/gender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:layout_marginLeft="-2dp"
                 android:entries="@array/profile_gender" />
 
             <android.support.design.widget.TextInputLayout
