Added more animations

--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -11,6 +11,11 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_in_down</item>
+    </style>
+
     <style name="textInputLayoutStyle" parent="Widget.Design.TextInputLayout">
         <item name="android:textColorHint">@color/text_darker</item>
         <item name="errorTextAppearance">@style/error_appearance</item>
