Booking Reason now wraps it's text

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -427,7 +427,7 @@
                 android:background="@drawable/edit_text_boarder_grey"
                 android:gravity="left"
                 android:hint="@string/booking_reason_hint"
-                android:inputType="textCapWords" />
+                android:inputType="textCapWords|textMultiLine" />
 
         </android.support.design.widget.TextInputLayout>
 
