--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -96,7 +96,8 @@
             android:layout_marginTop="24dp"
             android:onClick="@{handlers::onClickEvent}"
             android:text="@string/action_reset_password"
-            android:textSize="16sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <!-- Login progress -->
         <ProgressBar
