Should use sp instead of dp. Small fix for context leak

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -39,7 +39,7 @@
             android:paddingStart="16dp"
             android:text="@string/forgot_password_header"
             android:textColor="@color/text_darker"
-            android:textSize="32dp"
+            android:textSize="32sp"
             android:textStyle="bold" />
 
         <TextView
