--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -228,18 +228,20 @@
                 <EditText
                     android:id="@+id/etxt_db_findcare"
                     style="@style/db_searchButtonStyle"
-                    android:layout_width="338dp"
+                    android:layout_width="match_parent"
                     android:layout_height="46dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="11dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="13dp"
+                    android:ellipsize="end"
                     android:hint="Seach for a doctor, speciality or condition"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:lineSpacingExtra="5sp"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
+                    android:paddingStart="10dp"
                     android:textColorHint="@color/db_gunmetal" />
 
                 <LinearLayout
