Booking Confirmation's reason for visit is more centered with better padding

--- a/MyHome/app/src/main/res/layout/book_confirmation.xml
+++ b/MyHome/app/src/main/res/layout/book_confirmation.xml
@@ -6,9 +6,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingLeft="18dp"
-        android:paddingRight="18dp">
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp">
 
         <TextView
             android:id="@+id/date"
