Better alignment for Provider Details phone

--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -26,8 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="18dp"
-            android:layout_marginTop="6dp"
             android:layout_marginStart="13dp"
+            android:layout_marginTop="6dp"
             android:layout_toRightOf="@id/doctor_image"
             android:text="Dr. Edward Patterson, MD"
             android:textSize="20sp"
@@ -123,10 +123,9 @@
             android:layout_alignTop="@id/phone_icon"
             android:layout_centerInParent="true"
             android:layout_marginLeft="16dp"
-            android:autoLink="phone"
             android:gravity="center"
             android:text="1-844-274-8497"
-            android:textColorLink="@color/primary"
+            android:textColor="@color/primary"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
